Fixes min-height on index pg to remove arrow on small height viewport

--- a/styles/ArrowIcon.module.css
+++ b/styles/ArrowIcon.module.css
@@ -4,8 +4,11 @@
     /* width: 100%; */
     /* z-index: 9; */
 }
-.hide {
+.icon {
     display: none;
+}
+@media screen and (min-height) {
+    
 }
 .icon {
     display: flex; 
