--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -14,7 +14,7 @@
     margin-bottom: 0;
     margin-top: 0;
     height: 28vh;
-    min-height: 155px;
+    min-height: 190px;
     width: 100%;
     font-family: 'Garamond', serif;
     text-transform: uppercase;
